--- a/AI/utils/arima.ipynb
+++ b/AI/utils/arima.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 113,
    "id": "aa420d8c",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 114,
    "id": "e4c2c618",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 115,
    "id": "065579b5",
    "metadata": {},
    "outputs": [
@@ -116,8 +116,8 @@
       "==============================================================================\n",
       "Dep. Variable:                  Price   No. Observations:                   38\n",
       "Model:                 ARIMA(3, 1, 1)   Log Likelihood                -383.947\n",
-      "Date:                Wed, 14 May 2025   AIC                            777.894\n",
-      "Time:                        19:36:51   BIC                            785.949\n",
+      "Date:                Thu, 15 May 2025   AIC                            777.894\n",
+      "Time:                        15:50:17   BIC                            785.949\n",
       "Sample:                             0   HQIC                           780.734\n",
       "                                 - 38                                         \n",
       "Covariance Type:                  opg                                         \n",
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 116,
    "id": "929d63ac",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 117,
    "id": "ace7ccdc",
    "metadata": {},
    "outputs": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 118,
    "id": "897f5bcb",
    "metadata": {},
    "outputs": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 119,
    "id": "b5222d26",
    "metadata": {},
    "outputs": [
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 120,
    "id": "ce566d16",
    "metadata": {},
    "outputs": [
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 121,
    "id": "0b3a6d89",
    "metadata": {},
    "outputs": [
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 122,
    "id": "b3bb71da",
    "metadata": {},
    "outputs": [
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 123,
    "id": "1861c055",
    "metadata": {},
    "outputs": [
@@ -558,6 +558,49 @@
     "\n",
     "product_df = pd.DataFrame(product_list.tolist())\n",
     "product_df.to_csv(\"csv/parsed_trendyol.csv\", index=False, encoding=\"utf-8-sig\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "8bf330e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0          Apple iPhone 16 Pro\n",
+      "1      Apple iPhone 16 Pro Max\n",
+      "20             Apple iPhone 15\n",
+      "21     Apple iPhone 15 Pro Max\n",
+      "22        Apple iPhone 15 Plus\n",
+      "                ...           \n",
+      "461             Huawei Pura 70\n",
+      "463                 Realme 12x\n",
+      "465               vivo iQOO 12\n",
+      "466                  vivo X100\n",
+      "467            Xiaomi Mix Flip\n",
+      "Name: phone_model, Length: 196, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv(r\"csv/phones.csv\")\n",
+    "\n",
+    "df = df.drop_duplicates(subset=[\"phone_model\"]).reset_index(drop=True)\n",
+    "\n",
+    "df[\"launch_date\"] = pd.to_datetime(\n",
+    "    df[\"launch_date\"], format=\"%m/%d/%Y\", errors=\"coerce\"\n",
+    ")\n",
+    "\n",
+    "df = df[df[\"launch_date\"] > \"2023-01-20\"]\n",
+    "\n",
+    "print(df[\"phone_model\"])\n",
+    "\n",
+    "df[\"phone_model\"].to_csv(r\"csv/phones_after_2023.csv\", index=False, encoding=\"utf-8-sig\")"
    ]
   }
  ],
