--- a/AI/utils/arima.ipynb
+++ b/AI/utils/arima.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 1,
    "id": "aa420d8c",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 2,
    "id": "e4c2c618",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 3,
    "id": "065579b5",
    "metadata": {},
    "outputs": [
@@ -116,8 +116,8 @@
       "==============================================================================\n",
       "Dep. Variable:                  Price   No. Observations:                   38\n",
       "Model:                 ARIMA(3, 1, 1)   Log Likelihood                -383.947\n",
-      "Date:                Thu, 15 May 2025   AIC                            777.894\n",
-      "Time:                        15:50:17   BIC                            785.949\n",
+      "Date:                Fri, 16 May 2025   AIC                            777.894\n",
+      "Time:                        16:59:34   BIC                            785.949\n",
       "Sample:                             0   HQIC                           780.734\n",
       "                                 - 38                                         \n",
       "Covariance Type:                  opg                                         \n",
@@ -145,11 +145,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\pc\\AppData\\Roaming\\Python\\Python313\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: An unsupported index was provided. As a result, forecasts cannot be generated. To use the model for forecasting, use one of the supported classes of index.\n",
+      "c:\\Users\\EXCALIBUR\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: An unsupported index was provided. As a result, forecasts cannot be generated. To use the model for forecasting, use one of the supported classes of index.\n",
       "  self._init_dates(dates, freq)\n",
-      "C:\\Users\\pc\\AppData\\Roaming\\Python\\Python313\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: An unsupported index was provided. As a result, forecasts cannot be generated. To use the model for forecasting, use one of the supported classes of index.\n",
+      "c:\\Users\\EXCALIBUR\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: An unsupported index was provided. As a result, forecasts cannot be generated. To use the model for forecasting, use one of the supported classes of index.\n",
       "  self._init_dates(dates, freq)\n",
-      "C:\\Users\\pc\\AppData\\Roaming\\Python\\Python313\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: An unsupported index was provided. As a result, forecasts cannot be generated. To use the model for forecasting, use one of the supported classes of index.\n",
+      "c:\\Users\\EXCALIBUR\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: An unsupported index was provided. As a result, forecasts cannot be generated. To use the model for forecasting, use one of the supported classes of index.\n",
       "  self._init_dates(dates, freq)\n"
      ]
     }
@@ -162,10 +162,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 4,
    "id": "929d63ac",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\EXCALIBUR\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:837: ValueWarning: No supported index is available. Prediction results will be given with an integer index beginning at `start`.\n",
+      "  return get_prediction_index(\n",
+      "c:\\Users\\EXCALIBUR\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:837: FutureWarning: No supported index is available. In the next version, calling this method in a model without a supported index will result in an exception.\n",
+      "  return get_prediction_index(\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -176,16 +186,6 @@
       "41    88055.164933\n",
       "42    88010.736201\n",
       "Name: predicted_mean, dtype: float64\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\pc\\AppData\\Roaming\\Python\\Python313\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:837: ValueWarning: No supported index is available. Prediction results will be given with an integer index beginning at `start`.\n",
-      "  return get_prediction_index(\n",
-      "C:\\Users\\pc\\AppData\\Roaming\\Python\\Python313\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:837: FutureWarning: No supported index is available. In the next version, calling this method in a model without a supported index will result in an exception.\n",
-      "  return get_prediction_index(\n"
      ]
     },
     {
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 5,
    "id": "ace7ccdc",
    "metadata": {},
    "outputs": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 6,
    "id": "897f5bcb",
    "metadata": {},
    "outputs": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 7,
    "id": "b5222d26",
    "metadata": {},
    "outputs": [
@@ -269,16 +269,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\pc\\AppData\\Roaming\\Python\\Python313\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: An unsupported index was provided. As a result, forecasts cannot be generated. To use the model for forecasting, use one of the supported classes of index.\n",
+      "c:\\Users\\EXCALIBUR\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: An unsupported index was provided. As a result, forecasts cannot be generated. To use the model for forecasting, use one of the supported classes of index.\n",
       "  self._init_dates(dates, freq)\n",
-      "C:\\Users\\pc\\AppData\\Roaming\\Python\\Python313\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: An unsupported index was provided. As a result, forecasts cannot be generated. To use the model for forecasting, use one of the supported classes of index.\n",
+      "c:\\Users\\EXCALIBUR\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: An unsupported index was provided. As a result, forecasts cannot be generated. To use the model for forecasting, use one of the supported classes of index.\n",
       "  self._init_dates(dates, freq)\n",
-      "C:\\Users\\pc\\AppData\\Roaming\\Python\\Python313\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: An unsupported index was provided. As a result, forecasts cannot be generated. To use the model for forecasting, use one of the supported classes of index.\n",
-      "  self._init_dates(dates, freq)\n",
-      "C:\\Users\\pc\\AppData\\Roaming\\Python\\Python313\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:837: ValueWarning: No supported index is available. Prediction results will be given with an integer index beginning at `start`.\n",
-      "  return get_prediction_index(\n",
-      "C:\\Users\\pc\\AppData\\Roaming\\Python\\Python313\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:837: FutureWarning: No supported index is available. In the next version, calling this method in a model without a supported index will result in an exception.\n",
-      "  return get_prediction_index(\n"
+      "c:\\Users\\EXCALIBUR\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: An unsupported index was provided. As a result, forecasts cannot be generated. To use the model for forecasting, use one of the supported classes of index.\n",
+      "  self._init_dates(dates, freq)\n"
      ]
     },
     {
@@ -296,6 +292,16 @@
       "45    88166.887496\n",
       "46    88168.677702\n",
       "Name: predicted_mean, dtype: float64\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\EXCALIBUR\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:837: ValueWarning: No supported index is available. Prediction results will be given with an integer index beginning at `start`.\n",
+      "  return get_prediction_index(\n",
+      "c:\\Users\\EXCALIBUR\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:837: FutureWarning: No supported index is available. In the next version, calling this method in a model without a supported index will result in an exception.\n",
+      "  return get_prediction_index(\n"
      ]
     },
     {
@@ -326,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 8,
    "id": "ce566d16",
    "metadata": {},
    "outputs": [
@@ -371,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 9,
    "id": "0b3a6d89",
    "metadata": {},
    "outputs": [
@@ -432,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 10,
    "id": "b3bb71da",
    "metadata": {},
    "outputs": [
@@ -503,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 13,
    "id": "1861c055",
    "metadata": {},
    "outputs": [
@@ -562,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": null,
    "id": "8bf330e4",
    "metadata": {},
    "outputs": [
@@ -620,7 +626,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
