--- a/AI/utils/arima.ipynb
+++ b/AI/utils/arima.ipynb
@@ -116,8 +116,8 @@
       "==============================================================================\n",
       "Dep. Variable:                  Price   No. Observations:                   38\n",
       "Model:                 ARIMA(3, 1, 1)   Log Likelihood                -383.947\n",
-      "Date:                Fri, 16 May 2025   AIC                            777.894\n",
-      "Time:                        16:59:34   BIC                            785.949\n",
+      "Date:                Sun, 18 May 2025   AIC                            777.894\n",
+      "Time:                        19:07:45   BIC                            785.949\n",
       "Sample:                             0   HQIC                           780.734\n",
       "                                 - 38                                         \n",
       "Covariance Type:                  opg                                         \n",
@@ -145,11 +145,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\EXCALIBUR\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: An unsupported index was provided. As a result, forecasts cannot be generated. To use the model for forecasting, use one of the supported classes of index.\n",
+      "C:\\Users\\pc\\AppData\\Roaming\\Python\\Python313\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: An unsupported index was provided. As a result, forecasts cannot be generated. To use the model for forecasting, use one of the supported classes of index.\n",
       "  self._init_dates(dates, freq)\n",
-      "c:\\Users\\EXCALIBUR\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: An unsupported index was provided. As a result, forecasts cannot be generated. To use the model for forecasting, use one of the supported classes of index.\n",
+      "C:\\Users\\pc\\AppData\\Roaming\\Python\\Python313\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: An unsupported index was provided. As a result, forecasts cannot be generated. To use the model for forecasting, use one of the supported classes of index.\n",
       "  self._init_dates(dates, freq)\n",
-      "c:\\Users\\EXCALIBUR\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: An unsupported index was provided. As a result, forecasts cannot be generated. To use the model for forecasting, use one of the supported classes of index.\n",
+      "C:\\Users\\pc\\AppData\\Roaming\\Python\\Python313\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: An unsupported index was provided. As a result, forecasts cannot be generated. To use the model for forecasting, use one of the supported classes of index.\n",
       "  self._init_dates(dates, freq)\n"
      ]
     }
@@ -167,16 +167,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\EXCALIBUR\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:837: ValueWarning: No supported index is available. Prediction results will be given with an integer index beginning at `start`.\n",
-      "  return get_prediction_index(\n",
-      "c:\\Users\\EXCALIBUR\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:837: FutureWarning: No supported index is available. In the next version, calling this method in a model without a supported index will result in an exception.\n",
-      "  return get_prediction_index(\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -186,6 +176,16 @@
       "41    88055.164933\n",
       "42    88010.736201\n",
       "Name: predicted_mean, dtype: float64\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\pc\\AppData\\Roaming\\Python\\Python313\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:837: ValueWarning: No supported index is available. Prediction results will be given with an integer index beginning at `start`.\n",
+      "  return get_prediction_index(\n",
+      "C:\\Users\\pc\\AppData\\Roaming\\Python\\Python313\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:837: FutureWarning: No supported index is available. In the next version, calling this method in a model without a supported index will result in an exception.\n",
+      "  return get_prediction_index(\n"
      ]
     },
     {
@@ -269,11 +269,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\EXCALIBUR\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: An unsupported index was provided. As a result, forecasts cannot be generated. To use the model for forecasting, use one of the supported classes of index.\n",
+      "C:\\Users\\pc\\AppData\\Roaming\\Python\\Python313\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: An unsupported index was provided. As a result, forecasts cannot be generated. To use the model for forecasting, use one of the supported classes of index.\n",
       "  self._init_dates(dates, freq)\n",
-      "c:\\Users\\EXCALIBUR\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: An unsupported index was provided. As a result, forecasts cannot be generated. To use the model for forecasting, use one of the supported classes of index.\n",
+      "C:\\Users\\pc\\AppData\\Roaming\\Python\\Python313\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: An unsupported index was provided. As a result, forecasts cannot be generated. To use the model for forecasting, use one of the supported classes of index.\n",
       "  self._init_dates(dates, freq)\n",
-      "c:\\Users\\EXCALIBUR\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: An unsupported index was provided. As a result, forecasts cannot be generated. To use the model for forecasting, use one of the supported classes of index.\n",
+      "C:\\Users\\pc\\AppData\\Roaming\\Python\\Python313\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: An unsupported index was provided. As a result, forecasts cannot be generated. To use the model for forecasting, use one of the supported classes of index.\n",
       "  self._init_dates(dates, freq)\n"
      ]
     },
@@ -298,9 +298,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\EXCALIBUR\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:837: ValueWarning: No supported index is available. Prediction results will be given with an integer index beginning at `start`.\n",
+      "C:\\Users\\pc\\AppData\\Roaming\\Python\\Python313\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:837: ValueWarning: No supported index is available. Prediction results will be given with an integer index beginning at `start`.\n",
       "  return get_prediction_index(\n",
-      "c:\\Users\\EXCALIBUR\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:837: FutureWarning: No supported index is available. In the next version, calling this method in a model without a supported index will result in an exception.\n",
+      "C:\\Users\\pc\\AppData\\Roaming\\Python\\Python313\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:837: FutureWarning: No supported index is available. In the next version, calling this method in a model without a supported index will result in an exception.\n",
       "  return get_prediction_index(\n"
      ]
     },
@@ -341,6 +341,47 @@
      "output_type": "stream",
      "text": [
       "Estimation price: 19500.00 TL\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\pc\\AppData\\Roaming\\Python\\Python313\\site-packages\\joblib\\externals\\loky\\backend\\context.py:131: UserWarning: Could not find the number of physical cores for the following reason:\n",
+      "[WinError 2] Sistem belirtilen dosyayı bulamıyor\n",
+      "Returning the number of logical cores instead. You can silence this warning by setting LOKY_MAX_CPU_COUNT to the number of cores you want to use.\n",
+      "  warnings.warn(\n",
+      "  File \"C:\\Users\\pc\\AppData\\Roaming\\Python\\Python313\\site-packages\\joblib\\externals\\loky\\backend\\context.py\", line 247, in _count_physical_cores\n",
+      "    cpu_count_physical = _count_physical_cores_win32()\n",
+      "  File \"C:\\Users\\pc\\AppData\\Roaming\\Python\\Python313\\site-packages\\joblib\\externals\\loky\\backend\\context.py\", line 299, in _count_physical_cores_win32\n",
+      "    cpu_info = subprocess.run(\n",
+      "        \"wmic CPU Get NumberOfCores /Format:csv\".split(),\n",
+      "        capture_output=True,\n",
+      "        text=True,\n",
+      "    )\n",
+      "  File \"c:\\Python313\\Lib\\subprocess.py\", line 554, in run\n",
+      "    with Popen(*popenargs, **kwargs) as process:\n",
+      "         ~~~~~^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Python313\\Lib\\subprocess.py\", line 1039, in __init__\n",
+      "    self._execute_child(args, executable, preexec_fn, close_fds,\n",
+      "    ~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "                        pass_fds, cwd, env,\n",
+      "                        ^^^^^^^^^^^^^^^^^^^\n",
+      "    ...<5 lines>...\n",
+      "                        gid, gids, uid, umask,\n",
+      "                        ^^^^^^^^^^^^^^^^^^^^^^\n",
+      "                        start_new_session, process_group)\n",
+      "                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Python313\\Lib\\subprocess.py\", line 1551, in _execute_child\n",
+      "    hp, ht, pid, tid = _winapi.CreateProcess(executable, args,\n",
+      "                       ~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^\n",
+      "                             # no special security\n",
+      "                             ^^^^^^^^^^^^^^^^^^^^^\n",
+      "    ...<4 lines>...\n",
+      "                             cwd,\n",
+      "                             ^^^^\n",
+      "                             startupinfo)\n",
+      "                             ^^^^^^^^^^^^\n"
      ]
     }
    ],
@@ -509,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "1861c055",
    "metadata": {},
    "outputs": [
@@ -518,15 +559,15 @@
      "output_type": "stream",
      "text": [
       "0    Garanti Tipi:Apple Türkiye Garantili; Kamera Ç...\n",
-      "1    Garanti Tipi:Apple Türkiye Garantili; Kamera Ç...\n",
+      "1    Garanti Tipi:İthalatçı Garantili; Kamera Çözün...\n",
       "2    Garanti Tipi:Apple Türkiye Garantili; Kamera Ç...\n",
-      "3    Garanti Tipi:Apple Türkiye Garantili; Kamera Ç...\n",
+      "3    Ekran Çözünürlüğü:FHD+; Ekran Boyutu:6,7 inç; ...\n",
       "4    Garanti Tipi:Apple Türkiye Garantili; Kamera Ç...\n",
       "Name: Description, dtype: object\n",
       "0    {'Garanti Tipi': 'Apple Türkiye Garantili', 'K...\n",
-      "1    {'Garanti Tipi': 'Apple Türkiye Garantili', 'K...\n",
+      "1    {'Garanti Tipi': 'İthalatçı Garantili', 'Kamer...\n",
       "2    {'Garanti Tipi': 'Apple Türkiye Garantili', 'K...\n",
-      "3    {'Garanti Tipi': 'Apple Türkiye Garantili', 'K...\n",
+      "3    {'Ekran Çözünürlüğü': 'FHD+', 'Ekran Boyutu': ...\n",
       "4    {'Garanti Tipi': 'Apple Türkiye Garantili', 'K...\n",
       "Name: Description, dtype: object\n"
      ]
@@ -536,7 +577,7 @@
     "import pandas as pd\n",
     "\n",
     "# CSV dosyasını oku\n",
-    "df = pd.read_csv(r\"csv/trendyol.csv\")\n",
+    "df = pd.read_csv(r\"csv/trendyolyeni.csv\")\n",
     "\n",
     "# İlk 5 ürünü görüntüle\n",
     "print(df[\"Description\"].head(5))\n",
@@ -568,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "8bf330e4",
    "metadata": {},
    "outputs": [
@@ -578,15 +619,15 @@
      "text": [
       "0          Apple iPhone 16 Pro\n",
       "1      Apple iPhone 16 Pro Max\n",
-      "20             Apple iPhone 15\n",
-      "21     Apple iPhone 15 Pro Max\n",
-      "22        Apple iPhone 15 Plus\n",
+      "2              Apple iPhone 15\n",
+      "3      Apple iPhone 15 Pro Max\n",
+      "4         Apple iPhone 15 Plus\n",
       "                ...           \n",
-      "461             Huawei Pura 70\n",
-      "463                 Realme 12x\n",
-      "465               vivo iQOO 12\n",
-      "466                  vivo X100\n",
-      "467            Xiaomi Mix Flip\n",
+      "191             Huawei Pura 70\n",
+      "192                 Realme 12x\n",
+      "193               vivo iQOO 12\n",
+      "194                  vivo X100\n",
+      "195            Xiaomi Mix Flip\n",
       "Name: phone_model, Length: 196, dtype: object\n"
      ]
     }
@@ -602,7 +643,7 @@
     "    df[\"launch_date\"], format=\"%m/%d/%Y\", errors=\"coerce\"\n",
     ")\n",
     "\n",
-    "df = df[df[\"launch_date\"] > \"2023-01-20\"]\n",
+    "df = df[df[\"launch_date\"] > \"2023-01-20\"].reset_index(drop=True)\n",
     "\n",
     "print(df[\"phone_model\"])\n",
     "\n",
@@ -626,7 +667,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
