--- a/AI/utils/arima.ipynb
+++ b/AI/utils/arima.ipynb
@@ -146,17 +146,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "929d63ac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "ace7ccdc",
    "metadata": {},
    "outputs": [],
@@ -203,43 +192,6 @@
     "plt.title('ARIMA Tahmini')\n",
     "plt.legend()\n",
     "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ce566d16",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "from sklearn.neighbors import KNeighborsRegressor\n",
-    "\n",
-    "data = pd.DataFrame({\n",
-    "    'RAM': [8, 6, 4, 8, 16],\n",
-    "    'Depolama': [128, 128, 64, 256,512],\n",
-    "    'Ekran': [6.5, 6.3, 5.8, 6.7,6.7],\n",
-    "    'Kamera': [64, 48, 12, 108,200],\n",
-    "    'Fiyat': [17000, 19000, 20000, 25000,40000]\n",
-    "}\n",
-    "\n",
-    ")\n",
-    "\n",
-    "X = data[['RAM', 'Depolama', 'Ekran', 'Kamera']]\n",
-    "y = data['Fiyat']\n",
-    "\n",
-    "model = KNeighborsRegressor(n_neighbors=2)\n",
-    "model.fit(X, y)\n",
-    "\n",
-    "yeni_telefon = pd.DataFrame({\n",
-    "    'RAM': [6],\n",
-    "    'Depolama': [64],\n",
-    "    'Ekran': [5.2],\n",
-    "    'Kamera': [5]\n",
-    "})\n",
-    "\n",
-    "tahmin = model.predict(yeni_telefon)\n",
-    "print(f\"Estimation price: {tahmin[0]:.2f} TL\")\n"
    ]
   },
   {
@@ -330,46 +282,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1861c055",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "# CSV dosyasını oku\n",
-    "df = pd.read_csv(r\"csv/trendyolyeni.csv\")\n",
-    "\n",
-    "# İlk 5 ürünü görüntüle\n",
-    "print(df[\"Description\"].head(5))\n",
-    "\n",
-    "# Ürün açıklamalarını ';' ile böl\n",
-    "product = df[\"Description\"].str.split(\";\")\n",
-    "\n",
-    "\n",
-    "# Her ürün açıklamasını anahtar-değer çiftine dönüştürmek\n",
-    "def process_product_description(description):\n",
-    "    product_dict = {}\n",
-    "    for item in description:\n",
-    "        # \":\" ile bölerek anahtar ve değeri ayır\n",
-    "        if \":\" in item:\n",
-    "            key, value = item.split(\":\", 1)\n",
-    "            product_dict[key.strip()] = value.strip()  # boşlukları temizle\n",
-    "    return product_dict\n",
-    "\n",
-    "\n",
-    "# Her ürün için sözlük oluştur\n",
-    "product_list = product.map(process_product_description)\n",
-    "\n",
-    "# Sonuçları yazdır\n",
-    "print(product_list.head(5))\n",
-    "\n",
-    "product_df = pd.DataFrame(product_list.tolist())\n",
-    "product_df.to_csv(\"csv/parsed_trendyol.csv\", index=False, encoding=\"utf-8-sig\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "8bf330e4",
    "metadata": {},
    "outputs": [],
@@ -389,6 +301,20 @@
     "print(df[\"phone_model\"])\n",
     "\n",
     "df[\"phone_model\"].to_csv(r\"csv/phones_after_2023.csv\", index=False, encoding=\"utf-8-sig\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ac7eda1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_csv(r\"csv/phones.csv\")\n",
+    "notInTR = [\"motorola\", \"google\"]\n",
+    "df = df[(df[\"launch_date\"] > \"2023-01-20\") & ~df[\"phone_brand\"].isin(notInTR)].reset_index(drop=True)\n",
+    "df.to_csv(r\"csv/phones_after_2023.csv\", index=False, encoding=\"utf-8-sig\")"
    ]
   }
  ],
