--- a/AI/utils/arima.ipynb
+++ b/AI/utils/arima.ipynb
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "ac7eda1b",
    "metadata": {},
    "outputs": [],
@@ -963,7 +963,35 @@
     ")\n",
     "df = df[df[\"launch_date\"] > \"2023-01-20\"].reset_index(drop=True)\n",
     "df = df[~df[\"phone_brand\"].isin(notInTR)].reset_index(drop=True)\n",
-    "df.to_csv(r\"csv/phones_after_2023yeni.csv\", index=False, encoding=\"utf-8-sig\")"
+    "df.to_csv(r\"csv/phones_after_2023yeni.csv\", index=False, encoding=\"utf-8-sig\")\n",
+    "video_resolution_map = {\n",
+    "    \"1080p\": 1,\n",
+    "    \"2K\": 2,\n",
+    "    \"4K\": 3,\n",
+    "    \"8K\": 4\n",
+    "}\n",
+    "\n",
+    "df[\"video_resolution\"] = df[\"video_resolution\"].map(video_resolution_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "43e62456",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_csv(r\"csv/phones.csv\")\n",
+    "video_resolution_map = {\n",
+    "    \"1080p\": 1,\n",
+    "    \"2K\": 2,\n",
+    "    \"4K\": 3,\n",
+    "    \"8K\": 4\n",
+    "}\n",
+    "\n",
+    "df[\"video_resolution\"] = df[\"video_resolution\"].map(video_resolution_map)\n",
+    "df.to_csv(r\"csv/phones.csv\", index=False, encoding=\"utf-8-sig\")"
    ]
   }
  ],
@@ -983,7 +1011,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
